force-app/main/default/objects/AVO_Meter__c/AVO_Meter__c.object-meta.xml
<CustomObject>
    <label>Meter</label>
    <nameField>
        <label>Meter Serial Number (MSN)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>