force-app/main/default/objects/AVO_Meter__c/fields/AVO_Created_By_Approval__c.field-meta.xml
<CustomField>
    <fullName>AVO_Created_By_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By Approval</label>
    <type>Checkbox</type>
</CustomField>