force-app/main/default/objects/AVO_Meter__c/fields/AVO_Decimal_Places__c.field-meta.xml
<CustomField>
    <fullName>AVO_Decimal_Places__c</fullName>
    <label>Decimal Places</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>