force-app/main/default/objects/AVO_Meter__c/fields/AVO_Disposal_Approved_By_User__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposal_Approved_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposal Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meters</relationshipName>
    <type>Lookup</type>
</CustomField>