force-app/main/default/objects/AVO_Meter__c/fields/AVO_Disposal_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposal_Approved_Date__c</fullName>
    <label>Disposal Approved Date</label>
    <type>Date</type>
</CustomField>