force-app/main/default/objects/AVO_Meter__c/fields/AVO_Disposal_Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposal_Batch_ID__c</fullName>
    <label>Disposal Batch ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>