force-app/main/default/objects/AVO_Meter__c/fields/AVO_Disposal_Method__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposal_Method__c</fullName>
    <label>Disposal Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crushed</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Returned To Manufacturer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>