force-app/main/default/objects/AVO_Meter__c/fields/AVO_Dispose_Rec_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Dispose_Rec_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispose Rec By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meters2</relationshipName>
    <type>Lookup</type>
</CustomField>