force-app/main/default/objects/AVO_Meter__c/fields/AVO_Dispose_Rec_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Dispose_Rec_Date__c</fullName>
    <label>Dispose Rec Date</label>
    <type>DateTime</type>
</CustomField>