force-app/main/default/objects/AVO_Meter__c/fields/AVO_Disposed_By_User__c.field-meta.xml
<CustomField>
    <fullName>AVO_Disposed_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Meters1</relationshipName>
    <type>Lookup</type>
</CustomField>