force-app/main/default/objects/AVO_Meter__c/fields/AVO_Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Inventory_Status__c</fullName>
    <label>Meter Inventory Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dead On Site</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Disposal Approved</fullName>
                <label>Disposed Meter</label>
            </value>
            <value>
                <fullName>Disposed Meter - Dead/Scrapped</fullName>
                <label>Dead/Scrapped</label>
            </value>
            <value>
                <fullName>Double Metered</fullName>
            </value>
            <value>
                <fullName>Installed Meter</fullName>
            </value>
            <value>
                <fullName>Meter Retrieved - To Be Reused</fullName>
                <label>Retrieved Meter</label>
            </value>
            <value>
                <fullName>Missing Meter</fullName>
            </value>
            <value>
                <fullName>Ready in Warehouse</fullName>
            </value>
            <value>
                <fullName>Stored in Barn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>