force-app/main/default/objects/AVO_Meter__c/fields/AVO_Leading_Zeros__c.field-meta.xml
<CustomField>
    <fullName>AVO_Leading_Zeros__c</fullName>
    <label>Leading Zeros</label>
    <length>255</length>
    <type>Text</type>
</CustomField>