force-app/main/default/objects/AVO_Meter__c/fields/AVO_Legacy_Details__c.field-meta.xml
<CustomField>
    <fullName>AVO_Legacy_Details__c</fullName>
    <label>Legacy Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>