force-app/main/default/objects/AVO_Meter__c/fields/AVO_LegacyID__c.field-meta.xml
<CustomField>
    <fullName>AVO_LegacyID__c</fullName>
    <label>AVO LegacyID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>