force-app/main/default/objects/AVO_Meter__c/fields/AVO_Meter_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Geolocation__c</fullName>
    <label>Meter Geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>