force-app/main/default/objects/AVO_Meter__c/fields/AVO_Meter_Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Installation_Status__c</fullName>
    <label>Meter Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved and Active On Site</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Missing Meter</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
            <value>
                <fullName>Meter Moved</fullName>
            </value>
            <value>
                <fullName>Dead On Site</fullName>
            </value>
            <value>
                <fullName>Retrieved Meter</fullName>
            </value>
            <value>
                <fullName>Pending: Not Install to Specification</fullName>
            </value>
            <value>
                <fullName>Clerical Error</fullName>
            </value>
            <value>
                <fullName>Double Metered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>