force-app/main/default/objects/AVO_Meter__c/fields/AVO_Meter_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Location__c</fullName>
    <label>Meter Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alt. Leg</fullName>
            </value>
            <value>
                <fullName>Barn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pivot Point</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Water Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>