force-app/main/default/objects/AVO_Meter__c/fields/AVO_Meter_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Order_ID__c</fullName>
    <label>Meter Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>