force-app/main/default/objects/AVO_Meter__c/fields/AVO_Meter_Reg_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Reg_ID__c</fullName>
    <label>Meter Reg ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>