force-app/main/default/objects/AVO_Meter__c/fields/AVO_Meter_Verified__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Verified__c</fullName>
    <label>Meter Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>