force-app/main/default/objects/AVO_Meter__c/fields/AVO_Model__c.field-meta.xml
<CustomField>
    <fullName>AVO_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Model</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AVO_Meter_Codeset__c.AVO_Type__c</field>
            <operation>equals</operation>
            <value>Meter Model</value>
        </filterItems>
        <filterItems>
            <field>AVO_Meter_Codeset__c.AVO_Meter_Make__c</field>
            <operation>equals</operation>
            <valueField>$Source.AVO_Make__c</valueField>
        </filterItems>
        <filterItems>
            <field>AVO_Meter_Codeset__c.AVO_Status__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filterItems>
        <infoMessage>Please select an active Meter Model under the selected Make.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AVO_Meter_Codeset__c</referenceTo>
    <relationshipLabel>Meters (Model)</relationshipLabel>
    <relationshipName>Meters1</relationshipName>
    <type>Lookup</type>
</CustomField>