force-app/main/default/objects/AVO_Meter__c/fields/AVO_MOSID__c.field-meta.xml
<CustomField>
    <fullName>AVO_MOSID__c</fullName>
    <formula>IF(AVO_Meter_On_Site_ID__c &lt;&gt; 0, LPAD(TEXT( AVO_Meter_On_Site_ID__c ) , 5, &quot;0&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOSID</label>
    <type>Text</type>
</CustomField>