force-app/main/default/objects/AVO_Meter__c/fields/AVO_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit Number</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Meters</relationshipLabel>
    <relationshipName>Meters</relationshipName>
    <type>Lookup</type>
</CustomField>