force-app/main/default/objects/AVO_Meter__c/fields/AVO_Previous_MOSID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Previous_MOSID__c</fullName>
    <label>Previous MOSID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>