force-app/main/default/objects/AVO_Meter__c/fields/AVO_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Purchase_Date__c</fullName>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>