force-app/main/default/objects/AVO_Meter__c/fields/AVO_Read_Meter__c.field-meta.xml
<CustomField>
    <fullName>AVO_Read_Meter__c</fullName>
    <label>Read Meter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>