force-app/main/default/objects/AVO_Meter__c/fields/AVO_Reason_Meter_Not_Read__c.field-meta.xml
<CustomField>
    <fullName>AVO_Reason_Meter_Not_Read__c</fullName>
    <label>Reason Meter Not Read</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BATTERY DEAD</fullName>
            </value>
            <value>
                <fullName>CLERICAL ERROR</fullName>
            </value>
            <value>
                <fullName>COMPLICATED WAD</fullName>
            </value>
            <value>
                <fullName>DEAD ON SITE</fullName>
            </value>
            <value>
                <fullName>METER DAMAGED</fullName>
            </value>
            <value>
                <fullName>METER INSTALLED INCORRECTLY</fullName>
            </value>
            <value>
                <fullName>METER MISSING</fullName>
            </value>
            <value>
                <fullName>METER MOVED</fullName>
            </value>
            <value>
                <fullName>METER NOT IN USE</fullName>
            </value>
            <value>
                <fullName>METER REPLACED</fullName>
            </value>
            <value>
                <fullName>METER UNINSTALLED</fullName>
            </value>
            <value>
                <fullName>MONTHLY METER READING SITE</fullName>
            </value>
            <value>
                <fullName>NON AG WATER USE</fullName>
            </value>
            <value>
                <fullName>NON-MAINTAINABLE METER</fullName>
            </value>
            <value>
                <fullName>OTHER (Please write in other reason)</fullName>
            </value>
            <value>
                <fullName>RETRIEVED METER</fullName>
            </value>
            <value>
                <fullName>SITE DOUBLE METERED</fullName>
            </value>
            <value>
                <fullName>Pending: Not Install to Specification</fullName>
            </value>
            <value>
                <fullName>Data Entry Stage Needs Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>