force-app/main/default/objects/AVO_Meter__c/fields/AVO_Specialist__c.field-meta.xml
<CustomField>
    <fullName>AVO_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meters (Specialist)</relationshipLabel>
    <relationshipName>Meter_Specialist</relationshipName>
    <type>Lookup</type>
</CustomField>