force-app/main/default/objects/AVO_Meter__c/fields/AVO_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Meter</fullName>
            </value>
            <value>
                <fullName>AG Water Metering Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>