force-app/main/default/objects/AVO_Meter__c/fields/AVO_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>AVO_Unit_Of_Measure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_Unit_Of_Measure</valueSetName>
    </valueSet>
</CustomField>