force-app/main/default/objects/AVO_Meter__c/fields/AVO_Verified_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Verified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verified By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meters (Verified By)</relationshipLabel>
    <relationshipName>Meters</relationshipName>
    <type>Lookup</type>
</CustomField>