force-app/main/default/objects/AVO_Meter__c/recordTypes/Meter.recordType-meta.xml
<RecordType>
    <fullName>Meter</fullName>
    <active>true</active>
    <label>Meter</label>
</RecordType>