force-app/main/default/objects/AVO_Meter__c/validationRules/AVO_Date_Verified_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Date_Verified_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( AVO_Meter_Verified__c, &quot;Yes&quot; ),
ISBLANK(  AVO_Date_Verified__c )
)</errorConditionFormula>
    <errorDisplayField>AVO_Date_Verified__c</errorDisplayField>
    <errorMessage>Date Verified is mandatory when Meter Verified is Yes.</errorMessage>
</ValidationRule>