force-app/main/default/objects/AVO_Meter__c/validationRules/AVO_Disposal_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Disposal_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(ISBLANK(  AVO_Disposal_Approved_Date__c ), NOT(ISBLANK(  AVO_Disposal_Approved_By_User__c ))),
AND(ISBLANK(AVO_Disposal_Approved_By_User__c  ), NOT(ISBLANK(AVO_Disposal_Approved_Date__c )))
)</errorConditionFormula>
    <errorMessage>Disposal Approved By and Disposal Approved Date must both be filled in.</errorMessage>
</ValidationRule>