force-app/main/default/objects/AVO_Meter__c/validationRules/AVO_Disposal_Method_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Disposal_Method_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISBLANK(TEXT(AVO_Disposal_Method__c)),
  ISPICKVAL(AVO_Inventory_Status__c, &quot;Disposed Meter - Dead/Scrapped&quot;)  
)</errorConditionFormula>
    <errorMessage>Disposal Method is required when Meter Inventory Status is set to Dead/Scrapped.</errorMessage>
</ValidationRule>