force-app/main/default/objects/AVO_Meter__c/validationRules/AVO_Dispose_Rec.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Dispose_Rec</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(ISBLANK(    AVO_Dispose_Rec_Date__c ), NOT(ISBLANK(  AVO_Dispose_Rec_By__c ))),
AND(ISBLANK(AVO_Dispose_Rec_By__c ), NOT(ISBLANK(AVO_Dispose_Rec_Date__c )))
)</errorConditionFormula>
    <errorMessage>Dispose Rec By and Dispose Rec Date must both be filled in.</errorMessage>
</ValidationRule>