force-app/main/default/objects/AVO_Meter__c/validationRules/AVO_Disposed.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Disposed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(ISBLANK( AVO_Disposed_Date__c ), NOT(ISBLANK( AVO_Disposed_By_User__c ))),
AND(ISBLANK(AVO_Disposed_By_User__c ), NOT(ISBLANK(AVO_Disposed_Date__c )))
)</errorConditionFormula>
    <errorMessage>Disposed By and Disposed Date must both be filled in.</errorMessage>
</ValidationRule>