force-app/main/default/objects/AVO_Meter__c/validationRules/AVO_Incorrect_Longitude_And_Latitude.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Incorrect_Longitude_And_Latitude</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
    AVO_Meter_Geolocation__Longitude__s &gt; -80.75777,
    AVO_Meter_Geolocation__Longitude__s &lt; -85.60238,
    AVO_Meter_Geolocation__Latitude__s  &gt; 34.997296,    
    AVO_Meter_Geolocation__Latitude__s  &lt; 30.319872
)</errorConditionFormula>
    <errorDisplayField>AVO_Meter_Geolocation__Latitude__s</errorDisplayField>
    <errorMessage>The longitude or latitude values are incorrect. Please enter values within the boundaries of the State of Georgia.</errorMessage>
</ValidationRule>