force-app/main/default/objects/AVO_Meter__c/validationRules/AVO_Verified_By_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AVO_Verified_By_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL( AVO_Meter_Verified__c, &quot;Yes&quot; ),
ISBLANK( AVO_Verified_By__c )
)</errorConditionFormula>
    <errorDisplayField>AVO_Verified_By__c</errorDisplayField>
    <errorMessage>Verified By is mandatory when Meter Verified is Yes.</errorMessage>
</ValidationRule>