force-app/main/default/objects/AVO_Meter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AVO_Inventory_Status__c</columns>
    <columns>AVO_MOSID__c</columns>
    <columns>AVO_Meter_Installation_Status__c</columns>
    <columns>AVO_Make__c</columns>
    <columns>AVO_Model__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>