force-app/main/default/objects/AVO_Meter__c/listViews/Meters_Pending_Disposal.listView-meta.xml
<ListView>
    <fullName>Meters_Pending_Disposal</fullName>
    <columns>NAME</columns>
    <columns>AVO_Inventory_Status__c</columns>
    <columns>AVO_Make__c</columns>
    <columns>AVO_Model__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AVO_Inventory_Status__c</field>
        <operation>equals</operation>
        <value>Meter Retrieved - To Be Reused</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>AVO_Meter__c.Meter</value>
    </filters>
    <label>Retrieved Meters</label>
</ListView>