force-app/main/default/objects/AVO_Meter__c/listViews/My_Meters.listView-meta.xml
<ListView>
    <fullName>My_Meters</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Meters</label>
</ListView>